--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #f4f4f4;
+    background-color: #000000;
 }
 
 header h2 {
@@ -29,14 +29,14 @@ header h2 {
 }
 
 .products {
-    background: #000;
+    background-image: url('../img/945731-3840x2160-desktop-4k-matte-black-wallpaper-image.jpg');
     color: #fff;
     padding: 50px 20px;
 }
 
 .products img {
-    width: 80%;
-    margin-top: 20px;
+    width: 100%;
+
 }
 
 .cta {
@@ -63,13 +63,13 @@ header h2 {
 }
 
 .contact input, .contact textarea {
-    width: 80%;
+    width: 100%;
     padding: 10px;
     font-size: 1rem;
 }
 
 .contact button {
-    background-color: #000;
+    background-color: #000000;
     color: #fff;
     border: none;
     padding: 10px 20px;
